# myMovieRatingApp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  myMovieRating
include/: movie.h  popup.h  tv_series.h  ui.h
src/: main.c  movie.c  popup.c  tv_series.c  ui.c
